--- a/catalog.html
+++ b/catalog.html
@@ -83,20 +83,20 @@
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="swimming-pool" checked>
                     Бассейн
+                    <input class="control-input" type="checkbox" name="swimming-pool" checked>                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                    <label class="control">
-                    <input class="control-input" type="checkbox" name="parking-space" checked>
                     Парковка
+                    <input class="control-input" type="checkbox" name="parking-space" checked>                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="wi-fi">
                     Wi-Fi
+                    <input class="control-input" type="checkbox" name="wi-fi">                    
                   </label>
                 </li>
               </ul>
@@ -106,20 +106,20 @@
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="hotel" checked>
                     Гостиница
+                    <input class="control-input" type="radio" name="product-group" value="hotel" checked>                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="motel">
                     Мотель
+                    <input class="control-input" type="radio" name="product-group" value="motel">                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="apartments">
                     Аппартаменты
+                    <input class="control-input" type="radio" name="product-group" value="apartments">                    
                   </label>
                 </li>
               </ul>
@@ -143,10 +143,10 @@
       </div>
 
       <div>
-                <!-- Вторая секция - форма полей результатов -->
+        <!-- Вторая секция - форма полей результатов -->
         <section class="catalog-results" data-test="catalog">
 
-          <h2 class="catalog-results-subtitle" class="visually-hidden">Результат нашедших нужных гостиниц</h2>
+          <h2 class="visually-hidden">Результат нашедших нужных гостиниц</h2>
 
           <div>
             <p class="catalog-results-text">Найдено гостиниц:
@@ -198,6 +198,7 @@
                     </p>
                     <a class="hotel-cards-rating">Рейтинг: 8.5</a>
                 </li>
+                
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
@@ -261,13 +262,14 @@
                 </li>
               </ul>
             </div>
-          </form>
+          </article>
+
           <div class="pagination">
             <h3 class="visually-hidden">Страницы</h3>
             <ul class="pagination-list">
               <li class="pagination-item">
                 <a href="#" class="pagination-link">
-                  <span class="visually-hidden">Предыдущая страница</span>
+                  <span class="visually-hidden pagination-prev">Предыдущая страница</span>
                 </a>
               </li>
               <li class="pagination-item">
@@ -309,6 +311,7 @@
             </a>
           </form>
         </section>
+
       </main>
 
         <footer class="main-footer" data-test="footer">
