--- a/5/catalog.html
+++ b/5/catalog.html
@@ -8,74 +8,63 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
-    <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/>
     <base href="https://htmlacademy-htmlcss.github.io/2288781-sedona-38/5/">
 </head>
 
   <body>
 
-    <header class="main-header" data-test="header">
-      <!-- Заголовок меню в главной странице (скрытый) -->
-      <h1 class="visually-hidden">Меню главной страницы</h1>
-      <!-- Меню -->
-      <nav class="main-navigation">
-        <!-- Подзаголовок навигации (скрытый) -->
-        <h2 class="visually-hidden">Навигация</h2>
-        <!-- Основной логотип города Седоны-->
-        <a class="main-header-logo" href="index.html">
-          <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
-        </a>
-        <!-- Список первой части меню -->
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link navigation-text navigation-link-current" aria-current="page">Гостиницы</a>
-          </li>
-        </ul>
-        <!-- Список второй части меню -->
-        <ul class="navigation-list-user">
-          <li class="navigation-item-user">
-            <a class="navigation-link-user icon-search" href="#">
-              <span class="visually-hidden">Поиск</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 19 19" fill="none">
-                <path d="M18.8928 17.0083L15.1928 13.3287C16.1928 12.0359 16.8928 10.3453 16.8928 8.4558C16.8928 4.08011 13.2928 0.5 8.89282 0.5C4.49282 0.5 0.892822 4.17956 0.892822 8.55525C0.892822 12.9309 4.49282 16.511 8.89282 16.511C10.6928 16.511 12.3928 15.9144 13.7928 14.8204L17.4928 18.5L18.8928 17.0083ZM8.89282 14.5221C5.59282 14.5221 2.89282 11.837 2.89282 8.55525C2.89282 5.27348 5.59282 2.5884 8.89282 2.5884C12.1928 2.5884 14.8928 5.27348 14.8928 8.55525C14.8928 11.837 12.1928 14.5221 8.89282 14.5221Z" fill="black"/>
-              </svg>
-            </a>
-          </li>
-          <li class="navigation-item-user">
-            <a class="navigation-link-user icon-heart" href="#">
-              <span class="visually-hidden">Избранное</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.29282 17C8.99282 17 8.69282 16.9 8.49282 16.6C3.09282 10.5 1.79282 9.1 1.49282 8.7C0.792822 7.8 0.392822 6.6 0.392822 5.4C0.392822 2.4 2.79282 0 5.89282 0C7.19282 0 8.39282 0.5 9.39282 1.3C10.3928 0.5 11.6928 0 12.8928 0C15.8928 0 18.3928 2.4 18.3928 5.4C18.3928 6.7 17.8928 7.9 17.0928 8.8L10.0928 16.7C9.89282 16.9 9.69282 17 9.29282 17ZM3.29282 7.5C3.59282 7.9 6.79282 11.5 9.39282 14.4L15.5928 7.4C16.0928 6.9 16.2928 6.2 16.2928 5.4C16.2928 3.6 14.7928 2.1 12.9928 2.1C11.9928 2.1 10.9928 2.6 10.2928 3.4C9.99282 3.7 9.69282 3.8 9.39282 3.8C9.09282 3.8 8.79282 3.6 8.59282 3.4C7.89282 2.6 6.89282 2.1 5.89282 2.1C4.09282 2.1 2.59282 3.6 2.59282 5.4C2.49282 6.3 2.89282 7 3.29282 7.5C3.19282 7.5 3.19282 7.5 3.29282 7.5Z" fill="black"/>
-              </svg>
-              <span class="user-favorite-count">12</span>
-            </a>
-          </li>
-          <li class="navigation-item-user">
-            <a class="navigation-link-user navigation-button" href="#">Хочу сюда!</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div class="page-container">
 
-    <!-- Основное содержимое каталога -->
-    <main class="main-inner">
+      <!-- /*    header    */ -->
+      <header class="main-header" data-test="header">
+        <h1 class="visually-hidden">Меню главной страницы</h1>
+        <nav class="main-navigation">
+          <h2 class="visually-hidden">Навигация</h2>
+          <a class="main-header-logo" aria-current="page">
+            <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" aria-current="page">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list-user">
+            <li class="navigation-item-user">
+              <a class="navigation-link-user icon-search" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item-user">
+              <a class="navigation-link-user icon-heart" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.29282 17C8.99282 17 8.69282 16.9 8.49282 16.6C3.09282 10.5 1.79282 9.1 1.49282 8.7C0.792822 7.8 0.392822 6.6 0.392822 5.4C0.392822 2.4 2.79282 0 5.89282 0C7.19282 0 8.39282 0.5 9.39282 1.3C10.3928 0.5 11.6928 0 12.8928 0C15.8928 0 18.3928 2.4 18.3928 5.4C18.3928 6.7 17.8928 7.9 17.0928 8.8L10.0928 16.7C9.89282 16.9 9.69282 17 9.29282 17ZM3.29282 7.5C3.59282 7.9 6.79282 11.5 9.39282 14.4L15.5928 7.4C16.0928 6.9 16.2928 6.2 16.2928 5.4C16.2928 3.6 14.7928 2.1 12.9928 2.1C11.9928 2.1 10.9928 2.6 10.2928 3.4C9.99282 3.7 9.69282 3.8 9.39282 3.8C9.09282 3.8 8.79282 3.6 8.59282 3.4C7.89282 2.6 6.89282 2.1 5.89282 2.1C4.09282 2.1 2.59282 3.6 2.59282 5.4C2.49282 6.3 2.89282 7 3.29282 7.5C3.19282 7.5 3.19282 7.5 3.29282 7.5Z" fill="black"/>
+                </svg>
+                <span class="user-favorite-count">12</span>
+              </a>
+            </li>
+            <li class="navigation-item-user">
+              <a class="navigation-link-user navigation-button" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-    <!-- Заголовок главной страницы (скрытый) -->
-    <h1 class="main-inner-titul">Cайт поиска отелей в городе Седоне</h1>
+      /* ------- main ------- */
+      <main class="main-inner">
 
+      <h1 class="main-inner-titul">Cайт поиска отелей в городе Седоне</h1>
       <div class="search-main"></div>
 
-        <!-- Первая секция - поиск гостиницы -->
+        <!-- Первая секция - search -->
         <section class="search" data-test="search">
-          <!-- Подзаголовок поисковой секции -->
-          <h2 class="search-subtitle">Гостиницы Седоны</h2>
+          <h2 class="search-subtitle">Гостиниц Седоны</h2>
           <ul class="breadcrumbs-list">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">
@@ -89,59 +78,54 @@
             </li>
           </ul>
           <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get" data-test="filter">
-          <!-- Форма поисковых наборов -->
             <h3 class="visually-hidden">Поисковые формы</h3>
-            <!-- Подзаголовок поисковых наборов (скрытый) -->
             <fieldset class="catalog-filter-infrastructure">
-            <!-- Набор полей инфраструктуры -->
               <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="swimming-pool" checked>
                     Бассейн
+                    <input class="control-input" type="checkbox" name="swimming-pool" checked>                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                    <label class="control">
-                    <input class="control-input" type="checkbox" name="parking-space" checked>
                     Парковка
+                    <input class="control-input" type="checkbox" name="parking-space" checked>                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox" name="wi-fi">
                     Wi-Fi
+                    <input class="control-input" type="checkbox" name="wi-fi">                    
                   </label>
                 </li>
               </ul>
             </fieldset>
             <fieldset class="catalog-filter-type-of-housing">
-            <!-- Набор полей типов жилья -->
               <legend class="catalog-filter-title">Тип жилья:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="hotel" checked>
                     Гостиница
+                    <input class="control-input" type="radio" name="product-group" value="hotel" checked>                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="motel">
                     Мотель
+                    <input class="control-input" type="radio" name="product-group" value="motel">                    
                   </label>
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="product-group" value="apartments">
                     Аппартаменты
+                    <input class="control-input" type="radio" name="product-group" value="apartments">                    
                   </label>
                 </li>
               </ul>
             </fieldset>
             <fieldset class="catalog-filter-price">
-            <!-- Набор полей прайса -->
               <object>
                 <legend class="catalog-filter-price">Стоимость, ₽:</legend>
                 <input type="number" name="min-price" id="min-price-field" value="0" placeholder="от">
@@ -158,64 +142,64 @@
           </form>
         </section>
       </div>
+
       <div>
-        <section class="catalog-results" data-test="catalog">
         <!-- Вторая секция - форма полей результатов -->
-          <h2 class="catalog-results-subtitle" class="visually-hidden">Результат нашедших нужных гостиниц</h2>
-          <!-- Подзаголовок результата нужных гостиниц (скрытый) -->
-          <p class="catalog-results-text">Найдено гостиниц:
-            <span>38</span>
-          </p>
-          <form class="catalog-results-select">
-            <select class="catalog-results-select" name="sorting" aria-label="Сортировка">
-              <option value="cheap" selected>Сначала дешевые</option>
-              <option value="expensive">Сначала дорогие</option>
-              <option value="popular">Сначала популярные</option>
-            </select>
-          </form>
-          <ul class="variant-list">
-            <li class="variant-item">
-              <a class="variant-link catalog-tale" href="#">
-                <span class="visually-hidden">Вид плитками</span>
-              </a>
-            </li>
-            <li class="variant-item">
-              <a class="variant-link catalog-slide" href="#">
-                <span class="visually-hidden">Вид слайдами</span>
-              </a>
-            </li>
-            <li class="variant-item">
-              <a class="variant-link catalog-bulleted-list" href="#">
-                <span class="visually-hidden">Вид на маркированный список</span>
-              </a>
-            </li>
-          </ul>
-          <form class="catalog-hotels">
-          <!-- Форма поиска нужных гостиниц -->
-            <h3 class=" catalog-hotels-subtheme visually-hidden">Примерный список гостиниц города Седоны</h3>
-            <!-- Подтема формы поиска гостиниц (скрытый) -->
+        <section class="catalog-results" data-test="catalog">
+
+          <h2 class="visually-hidden">Результат нашедших нужных гостиниц</h2>
+
+          <div>
+            <p class="catalog-results-text">Найдено гостиниц:
+              <span>38</span>
+            </p>
+            <form class="catalog-results-select">
+              <select class="catalog-results-select" name="sorting" aria-label="Сортировка">
+                <option value="cheap" selected>Сначала дешевые</option>
+                <option value="expensive">Сначала дорогие</option>
+                <option value="popular">Сначала популярные</option>
+              </select>
+            </form>
+            <ul class="variant-list">
+              <li class="variant-item">
+                <a class="variant-link catalog-tale" href="#">
+                  <span class="visually-hidden">Вид плитками</span>
+                </a>
+              </li>
+              <li class="variant-item">
+                <a class="variant-link catalog-slide" href="#">
+                  <span class="visually-hidden">Вид слайдами</span>
+                </a>
+              </li>
+              <li class="variant-item">
+                <a class="variant-link catalog-bulleted-list" href="#">
+                  <span class="visually-hidden">Вид на маркированный список</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <article class="catalog-hotels">
+          
             <div class="hotel-cards">
               <ul class="hotel-cards-list">
                 <li class="hotel-cards-item">
-                  <a class="hotel-cards-link" href="#">
-                    <img src="images/catalog/hotel-1.jpg" alt="Гостиница Amara-Resort-and-Spa - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
-                    <h4 class="hotel-cards-subtitul">Amara Resort & Spa</h4>
-                  </a>
-                  <p class="hotel-cards-text">Гостиница</p>
-                  <p class="hotel-cards-price">От 4000 ₽</p>
-                  <a>
-                    <input class="hotel-cards-more-detailed" type="submit" href="#" value="Подробнее">
-                  </a>
-                  <a>
-                    <input class="hotel-cards-favourites" type="submit" href="#" value="В избранное">
-                  </a>
-                  <p class="stars-4">
-                    <span class="visually-hidden">Четырехзвездочный отель</span>
-                  </p>
-                  <a>
-                    <input class="hotel-cards-rating" type="submit" value="Рейтинг: 8.5">
-                  </a>
+                    <a class="hotel-cards-link" href="#" tabindex="-1">
+                      <img  src="images/catalog/hotel-1.jpg" width="" height="" alt="Гостиница Amara-Resort-and-Spa - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
+                    </a>
+                    <a class="hotel-cards-subtitul" tabindex="-1">
+                      <h3>Amara Resort & Spa</h3>
+                    </a>                    
+                    <p class="hotel-cards-text">Гостиница</p>
+                    <p class="hotel-cards-price">От 4000 ₽</p>
+                    <a class="hotel-cards-more-detailed" href="#" tabindex="-1">Подробнее</a>
+                    <a class="hotel-cards-favourites" href="#">В избранное</a>
+                    <p class="stars-4">
+                      <span class="visually-hidden">Четырехзвездочный отель</span>
+                    </p>
+                    <a class="hotel-cards-rating">Рейтинг: 8.5</a>
                 </li>
+                
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
@@ -279,14 +263,14 @@
                 </li>
               </ul>
             </div>
-          </form>
+          </article>
+
           <div class="pagination">
             <h3 class="visually-hidden">Страницы</h3>
-            <!-- Подтема секции форм страниц (скрытый)  -->
             <ul class="pagination-list">
               <li class="pagination-item">
                 <a href="#" class="pagination-link">
-                  <span class="visually-hidden">Предыдущая страница</span>
+                  <span class="visually-hidden pagination-prev">Предыдущая страница</span>
                 </a>
               </li>
               <li class="pagination-item">
@@ -314,21 +298,22 @@
               </li>
             </ul>
           </div>
-        </section>
-      </div>
-      <div>
+          </article>
+        </div>
+
         <!-- Третья секция - рассылка -->
-        <section class="mailing" data-test="subsribe">
+        <section class="mailing mailing-subscribe-catalog" data-test="subsribe">
           <h2 class="mailing-title">Подпишитесь на рассылку</h2>
-          <!-- Подзаголовок секций "Рассылка" -->
           <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
-            <p class="mailing-form-name">
+            <a class="mailing-form-name">
               <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
               <button class="button button-mailing" type="submit">Подписаться</button>
-            </p>
+            </a>
           </form>
         </section>
+
+      </main>
 
         <footer class="main-footer" data-test="footer">
           <ul class="footer-social-list">
@@ -350,22 +335,21 @@
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
-          <ul class="footer-phone-item">
-            <li class="footer-phone-link">
-              <a class="text-phone" href="tel:+7(812)812-12-12">
+            <li class="footer-phone-item">
+              <a class="footer-phone-link" class="text-phone" href="tel:+7(812)812-12-12">
                 <span>+7(812)812-12-12</span>
               </a>
             </li>
-          </ul>
-          <ul class="footer-logo-item">
-            <li class="footer-logo-link">
-              <a class="logo-htmlacademy" href="https://htmlacademy.ru/">
+            <li class="footer-logo-item">
+              <a class="footer-logo-link" class="logo-html" href="https://htmlacademy.ru/">
                 <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
                 <span class="visually-hidden">HTML Academy</span>
               </a>
             </li>
           </ul>
         </footer>
+
+    </div>
 
   </body>
 
