--- a/catalog.html
+++ b/catalog.html
@@ -136,8 +136,8 @@
                 <input type="range" class="range-min" min="0" max="9000" value="5000" step="10">
               </div>
             </fieldset>
-            <input type="submit" value="Применить">
-            <input type="reset" value="Сбросить">
+            <input class="catalog-apply" type="submit" value="Применить">
+            <input class="catalog-throw-off" type="reset" value="Сбросить">
           </form>
         </section>
       </div>
