--- a/5/index.html
+++ b/5/index.html
@@ -18,39 +18,36 @@
         <h1 class="visually-hidden">Меню главной страницы</h1>
         <nav class="main-navigation">
           <h2 class="visually-hidden">Навигация</h2>
-          <div class="main-header-menu">
-            <a class="main-header-logo" aria-current="page">
+          <ul class="navigation-list">
+            <a class="navigation-logo" aria-current="page">
               <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
             </a>
-            <ul class="navigation-list">
-              <li class="navigation-item">
-                <a class="navigation-link navigation-link-current" aria-current="page">Главная</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="about.html">О Седоне</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="catalog.html">Гостиницы</a>
-              </li>
-            </ul>
-          </div>
-          <div class="main-header-menu-custom">
-            <ul class="navigation-list">
-              <li class="navigation-item">
-                <a class="navigation-link icon-search" href="#">
-                  <span class="visually-hidden">Поиск</span>
-                </a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link icon-heart navigation-user-count icon-heart-text" href="#">
-                  <span class="visually-hidden">Избранное</span>
-                </a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link navigation-button" href="#">Хочу сюда!</a>
-              </li>
-            </ul>
-          </div>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" aria-current="page">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list-user">
+            <li class="navigation-item-user">
+              <a class="navigation-link-user icon-search" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item-user">
+              <a class="navigation-link-user icon-heart" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <span class="navigation-link-user-statistics">12</span>
+              </a>
+            </li>
+            <li class="navigation-item-user">
+              <a class="navigation-link-user navigation-want-come-here" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
         </nav>
       </header>
 
