--- a/index.html
+++ b/index.html
@@ -10,206 +10,228 @@
   </head>
 
   <body>
+
     <div class="page-container">
 
       <!-- /*    header    */ -->
-      <header class="main-header" data-test="header">
-        <h1 class="visually-hidden">Меню главной страницы</h1>
-        <nav class="main-navigation">
-          <h2 class="visually-hidden">Навигация</h2>
+      <header class="page-header" data-test="header">
+        <div class="page-header-logo">
+          <a class="logo" aria-current="page">
+            <span class="visually-hidden">Логотип города Седона</span>
+          </a>
+        </div>
+        <nav class="main-navigation">          
           <ul class="navigation-list">
-            <a class="navigation-logo" aria-current="page">
-              <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
-            </a>
             <li class="navigation-item">
               <a class="navigation-link navigation-link-current" aria-current="page">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="about.html">О Седоне</a>
+              <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list-user">
-            <li class="navigation-item-user">
-              <a class="navigation-link-user icon-search" href="#">
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link icon-search" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
-            <li class="navigation-item-user">
-              <a class="navigation-link-user icon-heart" href="#">
+            <li class="navigation-item">
+              <a class="navigation-link icon-heart" href="#">
                 <span class="visually-hidden">Избранное</span>
-                <span class="navigation-link-user-statistics">12</span>
+                <span class="navigation-user-statistics">12</span>
               </a>
             </li>
-            <li class="navigation-item-user">
-              <a class="navigation-link-user navigation-want-come-here" href="#">Хочу сюда!</a>
+            <li class="navigation-itemr">
+              <a class="navigation-link navigation-button navigation-want-come-here" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
       </header>
 
-        <!-- /*    main    */ -->
-        <main class="main" data-test="main">
+      <!-- /*    main    */ -->
+      <main class="main" data-test="main">
+        
+        <article class="main-container">
 
           <h1 class="visually-hidden">Cайт поиска отелей в городе Седоне</h1>
 
-          <!-- /* Первая секция - hero */ -->
-          <section class="hero" data-test="hero">
+          <!-- /* hero */ -->
+          <hgroup class="hero" data-test="hero">
             <h2 class="visually-hidden">Добро пожаловать в великолепный город Седона!</h2>
             <p class="visually-hidden">Welcome to the gorgeous Sedona, because the Grand Canyon sucks!</p>
             <img class="hero-logo" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" type="image/svg+xml" aria-hidden="true">
-          </section>
+          </hgroup>
 
-          <!-- /* Вторая секция - advantages */ -->
+          <!-- /* advantages */ -->
           <section class="advantages" data-test="advantages">
             <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
             <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-            <article>
-              <div>
-                <ul class="advantages-list">
-                  <li class="advantages-item advantages-item-homes advantages-item-text">
+            <article class="advantages-reasons">              
+              <ul class="advantages-list">
+                <li class="advantages-item">                    
+                  <div >
                     <h3 class="advantages-title-cards">Настоящий городок</h3>
                     <p class="advantages-title-cards-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                  </li>
-                  <li>
-                    <img class="advantages-homes" src="images/city.jpg" width="800" height="385" alt="Национальные флаги на фоне уютных домов в окрестностях города Седоны.">
-                  </li>
-                </ul>
-              </div>
-              <div>
-                <ul>
-                  <li class="advantages-item advantages-item-square">
+                  </div>
+                  <img class="advantages-homes" src="images/city.jpg" width="800" height="385" alt="Национальные флаги на фоне уютных домов в окрестностях города Седоны.">
+                </li>
+                <li class="advantages-item advantages-item-square">
+                  <div>
                     <h3>Небольшая площадь</h3>
                     <p>Все достопримечательности находятся очень близко</p>
-                  </li>
-                  <li class="advantages-item advantages-item-road">
+                  </div>
+                </li>
+                <li class="advantages-item advantages-item-road">
+                  <div>
                     <h3>Красивая дорога</h3>
                     <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-                  </li>
-                  <li class="advantages-item advantages-item-tourist">
+                  </div>
+                </li>
+                <li class="advantages-item advantages-item-tourist">
+                  <div>
                     <h3>Мало туристов</h3>
                     <p>Большинство едет в Гранд Каньон и толпится там</p>
-                  </li>
-                </ul>
-              </div>
-              <div>
-                <ul>
-                  <li>
-                    <img src="images/canyon.jpg" width="800" height="385" alt="Красивый каньон и скалы у моста Дьявола в окрестностях Седоны.">
-                  </li>
-                  <li>
+                  </div>
+                </li>
+                <li>
+                  <img src="images/canyon.jpg" width="800" height="385" alt="Красивый каньон и скалы у моста Дьявола в окрестностях Седоны.">
+                  <div>
                     <h3>Там есть мост Дьявола</h3>
                     <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-                  </li>
-                </ul>
-              </div>
+                  </div>
+                </li>
+              </ul>
             </article>
           </section>
 
-          <!-- /* Третья секция - services */ -->
+          <!-- /* services */ -->
           <section class="services">
             <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
             <p class="services-text">Опытный персонал и качественное обслуживание!</p>
             <div class="services-reasons">
-              <h3 class="visually-hidden">Инфраструктура</h3>
-              <ul class="services-list">
+              <h3 class="visually-hidden">Инфраструктура</h3>              
+              <ul class="services-list">                
                 <li class="services-item services-item-housing">
-                  <object data="images/icons/home.svg">
+                  <object data="images/icons/home.svg"> /* Лучше в стиль отправить */
                     <img src="../images/icons/home.svg" width="75" height="72" role="img" aria-label="Домик" type="image/svg+xml">
                   </object>
-                  <p class="services-subtitul">Жильё</p>
-                  <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                  <div>
+                    <p class="services-subtitul">Жильё</p>
+                    <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                  </div>
                 </li>
                 <li class="services-item services-item-meal">
-                  <object data="images/icons/food.svg">
+                  <object data="images/icons/food.svg"> /* Лучше в стиль отправить */
                     <img src="../images/icons/food.svg" width="75" height="72" role="img" aria-label="Бургер" type="image/svg+xml">
                   </object>
-                  <p class="services-subtitul">Еда</p>
-                  <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                  <div>
+                    <p class="services-subtitul">Еда</p>
+                    <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                  </div>
                 </li>
                 <li class="services-item services-item-souvenirs">
-                  <object data="images/icons/souvenir.svg">
+                  <object data="images/icons/souvenir.svg"> /* Лучше в стиль отправить */
                     <img src="../images/icons/souvenir.svg" width="75" height="72" role="img" aria-label="Сувенир" type="image/svg+xml">
                   </object>
-                  <p class="services-subtitul">Сувениры</p>
-                  <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
+                  <div>
+                    <p class="services-subtitul">Сувениры</p>
+                    <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
+                  </div>
                 </li>
               </ul>
             </div>
           </section>
 
-          <!-- /* Четвертая секция - interest */ -->
+          <!-- /* interest */ -->
           <section class="interest" data-test="search">
             <h2>Заинтересовались?</h2>
             <form>
               <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-              <a class="interest-button" href="catalog.html">Поиск гостиницы в Седоне</a>
+              <a class="interest-link" href="modal.html">Поиск гостиницы в Седоне</a>
             </form>
             <div class="modal" hidden>
-              <!-- Контент модального окна -->
-              <a class="button" href="#madal" role="button">Открыть модальное окно</a>
+                <!-- Контент модального окна -->
+              <a class="button" href="modal.html" role="button">Открыть модальное окно</a>
               <div class="modal-inner">
-                <a class="modal-close" href="#"" role="button">
+                <a class="modal-close" href="catalog.html"" role="button">
                   <span class="visually-hidden">Закрыть окно</span>
                 </a>
               </div>
             </div>
           </section>
 
-          <!-- /* Пятая секция - subsribe */ -->
+          <!-- /* subsribe */ -->
           <section class="mailing mailing-subscribe" data-test="subsribe">
             <h2 class="mailing-title">Подпишитесь на рассылку</h2>
             <p class="mailing-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-            <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="#">
-              <label class="mailing-form-name">
-                <input type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>                
-              </label>
-              <button class="button button-mailing" type="submit">Подписаться</button>
+            <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="mailto:">
+              <label class="mailing-form-name" for="user-email-button">
+                <table>
+                  <tr>
+                    <td>
+                      <input
+                        type="email"
+                        id="user-email-button"
+                        name="user-email"
+                        placeholder="Ваш e-mail"
+                        required>
+                    </td>
+                    <td>
+                      <button class="button button-mailing" type="submit">Подписаться</button>
+                    </td>
+                  </tr>
+                </table>                                
+              </label>              
             </form>
           </section>
-        </main>
 
-        <!-- /* footer */ -->
-        <footer class="main-footer" data-test="footer">
+        </article>
+
+      </main>
+
+      <!-- /* footer */ -->
+      <footer class="main-footer" data-test="footer">
+
+        <section class="footer-social">
+          <h2 class="visually-hidden">Социальные каналы</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="footer-social-link" href="https://vk.com/htmlacademy">
-                <img src="images/icons/vk-focus.svg" width="24" height="14" alt="Российская социальная сеть «ВКонтакте».">
-                <span class="visually-hidden">ВКонтакте</span>
+              <a class="footer-social-link social-link-vk" type="button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Канал в ВКонтакт</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="https://t.me/htmlacademy">
-                <img src="images/icons/telegram-focus.svg" width="18" height="16" alt="Мессенджер «Telegram».">
-                <span class="visually-hidden">Telegram</span>
+              <a class="footer-social-link social-link-telegram" type="button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Канал в Telegram</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru">
-                <img src="images/icons/youtube-focus.svg" width="22" height="17" alt="Видеохостинг Youtube.">
-                <span class="visually-hidden">Youtube</span>
-              </a>
-            </li>
-          <ul class="footer-phone-item">
-            <li class="footer-phone-link">
-              <a class="text-phone" href="tel:+7(812)812-12-12">
-                <span>+7(812)812-12-12</span>
+              <a class="footer-social-link social-link-youtube" type="button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Канал в Youtube</span>
               </a>
             </li>
           </ul>
-          <ul class="footer-logo-item">
-            <li class="footer-logo-link">
-              <a class="logo-html" href="https://htmlacademy.ru/">
-                <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
-                <span class="visually-hidden">HTML Academy</span>
-              </a>
-            </li>
-          </ul>
-        </footer>
+        </section>
 
-      </div>
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <address class="footer-contacts-address">
+            <a class="link-phone" href="tel:+7(812)812-12-12"></a>
+          </address>
+        </section>
+
+        <section class="footer-htmlacademy">
+          <a class="footer-social-link social-link-htmlacademy" href="https://htmlacademy.ru/">
+            <span class="visually-hidden">Канал в HTML Academy</span>
+          </a>
+        </section>
+
+      </footer>
+
+    </div>
 
   </body>
 
